# ChangeLog for media-plugins/gst-plugins-alsa
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-alsa/ChangeLog,v 1.136 2009/09/15 01:58:12 jer Exp $

  15 Sep 2009; Jeroen Roovers <jer@gentoo.org>
  gst-plugins-alsa-0.10.23.ebuild:
  Stable for HPPA (bug #280946).

  31 Aug 2009; Brent Baude <ranger@gentoo.org>
  gst-plugins-alsa-0.10.23.ebuild:
  Marking gst-plugins-alsa-0.10.23 ppc64 stable for bug 280946

  29 Aug 2009; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-alsa-0.10.23.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #280946

  23 Aug 2009; nixnut <nixnut@gentoo.org> gst-plugins-alsa-0.10.23.ebuild:
  ppc stable #280946

  21 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  gst-plugins-alsa-0.10.23.ebuild:
  stable x86, bug 280946

*gst-plugins-alsa-0.10.24 (15 Aug 2009)

  15 Aug 2009; Olivier Crête <tester@gentoo.org>
  +gst-plugins-alsa-0.10.24.ebuild:
  Version bump

  15 Aug 2009; Olivier Crête <tester@gentoo.org>
  gst-plugins-alsa-0.10.23.ebuild:
  Stable on amd64, bug #280946

  05 Aug 2009; Mart Raudsepp <leio@gentoo.org>
  -gst-plugins-alsa-0.10.14.ebuild, -gst-plugins-alsa-0.10.20.ebuild,
  -gst-plugins-alsa-0.10.21.ebuild:
  Remove old

  01 Jul 2009; Raúl Porcel <armin76@gentoo.org>
  gst-plugins-alsa-0.10.22.ebuild:
  arm/ia64/sh/sparc stable wrt #266986

  23 May 2009; Jeroen Roovers <jer@gentoo.org>
  gst-plugins-alsa-0.10.22.ebuild:
  Stable for HPPA (bug #266986).

  21 May 2009; Brent Baude <ranger@gentoo.org>
  gst-plugins-alsa-0.10.22.ebuild:
  Marking gst-plugins-alsa-0.10.22 ppc64 stable for bug 266986

  21 May 2009; Brent Baude <ranger@gentoo.org>
  gst-plugins-alsa-0.10.22.ebuild:
  Marking gst-plugins-alsa-0.10.22 ppc stable for bug 266986

  14 May 2009; Markus Meier <maekke@gentoo.org>
  gst-plugins-alsa-0.10.22.ebuild:
  amd64 stable, bug #266986

  12 May 2009; Christian Faulhammer <fauli@gentoo.org>
  gst-plugins-alsa-0.10.22.ebuild: