@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/gst-plugins-alsa
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-alsa/ChangeLog,v 1.136 2009/09/15 01:58:12 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-alsa/ChangeLog,v 1.137 2009/11/06 14:05:49 leio Exp $
+
+  06 Nov 2009; Mart Raudsepp <leio@gentoo.org>
+  -gst-plugins-alsa-0.10.22.ebuild:
+  Remove old
 
   15 Sep 2009; Jeroen Roovers <jer@gentoo.org>
   gst-plugins-alsa-0.10.23.ebuild:
